# projetos-etl

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  install-haskell.sh  install-java.sh  plan.md  projeto.md
haskell-etl/: meteo-etl.cabal  stack.yaml  test-1000.csv
haskell-etl/src/: CsvExtractor.hs  DatabaseLoader.hs  Main.hs  Transformer.hs  UnitConverter.hs  WeatherRecord.hs
init/: 01-create-table.sql
java-etl/: pom.xml  test-10000.csv
java-etl/src/main/java/br/edu/utfpr/etl/: CsvExtractor.java  DatabaseLoader.java  Main.java  Transformer.java  UnitConverter.java  WeatherRecord.java
terraform/: main.tf  terraform.tfvars.example
tests/: conftest.py  requirements.txt  test_cross_impl.py  test_etl.py
